# cpm3

archives/asm80/: ASM.Z80  ASMREAD.ME
archives/cpm3_plm/: BDOS30.ASM  CCP.COM  CCP3.ASM  COMLIT.LIT  CONBDOS.ASM  CPM3ASM1.SUB  CPM3ASM2.SUB  CPM3ASM3.SUB  CPM3PLI1.SUB  CPM3PLM0.SUB  CPM3PLM1.SUB  CPM3PLM2.SUB  CPM3PLM3.SUB  CPM3PLM4.SUB  CPM3PLM5.SUB  CPM3PLM6.SUB  CPM3PLM7.SUB  CPM3PLM8.SUB  CPMBDOS1.ASM  CPMLDR.ASM  DATE.ASM  DATE.COM  DATE.PLM  DATMOD.ASM  DEVICE.COM  DIOMOD.DCL  DIRLBL.ASM  DIRLBL.RSX  DISP.PLM  DUMP.ASM  DUMP.COM  GENCOM.COM  GENCPM.COM  GET.COM  GETF.ASM  GETRSX.ASM  HELP.COM  HELP.HLP  HELP.PLM  HEXCOM.ASM  (+53 more)
archives/cpm3_src/: BDOS30.ASM  COPYSYS.ASM  CPM3ASM1.SUB  CPM3ASM2.SUB  CPM3ASM3.SUB  CPM3PLI1.SUB  CPM3PLM3.SUB  CPM3PLM4.SUB  CPM3PLM5.SUB  CPM3PLM7.SUB  CPM3PLM8.SUB  CPMBDOS1.ASM  CRDEF.PLM  DATE.ASM  DATE.PLM  DDT0MOV.ASM  DIRLBL.ASM  DPB80.PLM  FORMAT.LIT  GENCOM.PLM  GETRSX.ASM  INPOUT.ASM  MCD80A.ASM  MCD80F.ASM  MON.PLM  OS3BDOS.ASM  PATCH.ASM  PIP.LIN  PRS0MOV.ASM  RENAME.PLM  SCAN.LIT  SCAN.PLM  SEARCH.LIT  SET.PLM  SETBUF.PLM  SHOW.PLM  SOPT.DCL  UTIL.PLM  VERS.LIT  XFCB.LIT  (+1 more)
archives/cpm3_unix/: COMLIT.LIT  CONBDOS.ASM  COPYRT.LIT  CPM3PLM1.SUB  CPM3PLM2.SUB  CPM3PLM6.SUB  CPMLDR.ASM  CPMOVE.ASM  DDT2MON.ASM  DEVICE.PLM  DISP.PLM  DPB.LIT  DUMP.ASM  ERASE.PLM  FCB.LIT  FINFO.LIT  GENCPM.PLM  GET.PLM  GETDEF.PLM  HELP.PLM  HEXCOM.ASM  MAIN.PLM  MAIN80.PLM  Makefile  OS2CCP.ASM  PIP.PLM  PLIBIOS.DCL  PRS1ASM.ASM  PRS2MON.ASM  PUT.PLM  PUTRSX.ASM  RESBDOS.ASM  SAVE.ASM  SEARCH.PLM  SETDEF.PLM  SOPT.INC  SORT.PLM  TIMEST.PLM  TYPE.PLM
archives/zpm/: autotog.com  autotog.z80  bdos.sub  bios.txt  bnkbdos3.spr  bzpm0.z80  bzpm1.z80  bzpm2.z80  bzpm3.z80  bzpm4.z80  bzpm5.z80  bzpm6.z80  bzpm7.z80  clrhist.com  clrhist.z80  makedos.com  makedos.txt  resbdos3.spr  rzpm0.z80  scb.txt  setz3.com  setz3.z80  test152.c  test152.com  version.not  zpm3.txt  zpm3ctrl.txt  zpm3fix.txt  zpm3ldr.rel  zpm3ldr.txt  zpm3ldr.z80  zpm3s.txt
host/bin2hex/: bin2hex.c
host/cpmtools-2.23/: .depend  Makefile.in  NEWS  configure  configure.in  cpm.5  cpm.5.in  cpmchattr.1  cpmchattr.c  cpmchmod.1  cpmchmod.c  cpmcp.1  cpmfs.c  cpmls.1  cpmls.c  cpmrm.1  cpmrm.c  device_libdsk.c  device_posix.c  diskdefs.5  diskdefs.5.in  fsck.cpm.1  fsck.cpm.c  fsed.cpm.1  fsed.cpm.c  getopt.c  mkfs.cpm.1  mkfs.cpm.c  term_curses.c
host/z80-opcode/: t.pl  test.c  z80_opcodes.h  z80_opcodes.orig.txt  z80_opcodes.txt
pcw/: J12CPM3.EMS  J15CPM3.EMT.TXT  boot-dis-2.txt  boot-dis.txt  boot-sector.txt  cpm3.dsk  j15acpm3.dis.txt  j15acpm3.ems  j15acpm3.txt
pcw/bootrom-tools/: Makefile  README.txt  crc16.c  crcsubs.c  crcsubs.inc  dump.zsm  dump8.dsk  dump9.dsk  font.inc  hex2bin.c  hexcrc.c
pcw/j15cpm3/: J15CPM3.TXT  bios-resident.txt  bios-resident.z80  dis.sh  fid-loader.txt  fid-loader.z80  file-memmap.txt  joyce.ram  joyce.ram.txt  memory-copying.txt  rev.c  xbios-4.blk  (+4 more)
(+21 files in other folders)
